--- a/index.html
+++ b/index.html
@@ -19,18 +19,19 @@
         <img id="my-photo" src="assets/Babul01.png" alt="my photo" width="450" height="300">
       </div>
       <div id="about-me">
-        <h2>About me</h2>
+        <h2 class="same-color">About me</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque explicabo provident hic tempora! Quia praesentium non temporibus, eaque magni aliquam magnam reiciendis quo velit reprehenderit corporis quibusdam harum culpa ad sunt ullam eos sed natus explicabo veritatis aspernatur. Unde accusamus totam, hic impedit sapiente iure dolores possimus nostrum exercitationem velit.</p>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo omnis rem quis, totam ea quod, labore delectus nam odit numquam repellat nihil ad necessitatibus est sapiente sunt velit architecto recusandae laudantium. Hic, necessitatibus accusantium recusandae deserunt totam impedit, error itaque debitis illum, repellat earum officiis iure quam tempore excepturi temporibus!</p>
         <a href="">Continue reading</a>
       </div>
-      <articles id="main-contents">
+      <article id="main-contents">
           <div id="la-mode">
-            <h2>La Mode</h2>
+            arti
+            <h2 class="same-color">La Mode</h2>
             <img class="content-photos" src="assets/lamode.png" alt="lamode photo" width="100" height="100" >
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem sint quod dolores. Quidem quisquam, maxime mollitia itaque, sint quas voluptate, laudantium pariatur ipsam velit voluptatem.</p>
             <img src="" alt="">
-            <h3>Technologies:</h3>
+            <h3 >Technologies:</h3>
             <img src="" alt="">
             <img src="" alt="">
             <img src="" alt="">
@@ -43,8 +44,8 @@
           </div>
 
           <div id="family-contacts">
-            <h2>La Mode</h2>
-            <img class="content-photos" src="assets/familycontacts.png" alt="">
+            <h2 class="same-color">Family Contatcs</h2>
+            <img class="content-photos" src="assets/familycontacts.png" alt="" width="250" height="150">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur laborum culpa maxime dolorum deserunt! Cumque, sed? Aliquam corporis sed deleniti ex, totam earum! Suscipit, animi.</p>
             <img src="" alt="">
             <h3>Technologies:</h3>
@@ -59,7 +60,7 @@
             <button>Family Contacts</button>
           </div>
           <div id="five-eleven">
-            <h2>La Mode</h2>
+            <h2 class="same-color">fiveEleven</h2>
             <img class="content-photos" src="assets/fiveEleven.png" alt="">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum illo libero corporis alias inventore consequatur, at soluta minima repellat voluptatum obcaecati officia deserunt quisquam quasi?</p>
             <img src="" alt="">
@@ -77,7 +78,7 @@
 
 
 
-      </articles>
+      </article>
       <footer id="silver-color">
         <p>thedreamsglobal@gmail.com| 206-555-1212</p>
         <img class="footer-photo" src="assets/github.png" alt=""><a href="https://github.com/webmaaster">webmaaster</a>
