Done with styling

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
       </div>
 
-      <footer id="silver-color">
+      <footer id="silver-color"><br>
         <p>thedreamsglobal@gmail.com| 206-555-1212</p>
         <img class="footer-photo" src="assets/github.png" alt=""><a href="https://github.com/webmaaster">webmaaster</a>
         <img class="footer-photo" src="assets/linkedin.png" alt=""><a href="https://github.com">LinkedIn</a>
