Revised about me section

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       </div>
       <div id="about-me">
         <h2 class="same-color">About me</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque explicabo provident hic tempora! Quia praesentium non temporibus, eaque magni aliquam magnam reiciendis quo velit reprehenderit corporis quibusdam harum culpa ad sunt ullam eos sed natus explicabo veritatis aspernatur. Unde accusamus totam, hic impedit sapiente iure dolores possimus nostrum exercitationem velit.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo omnis rem quis, totam ea quod, labore delectus nam odit numquam repellat nihil ad necessitatibus est sapiente sunt velit architecto recusandae laudantium. Hic, necessitatibus accusantium recusandae deserunt totam impedit, error itaque debitis illum, repellat earum officiis iure quam tempore excepturi temporibus!</p>
+        <p>Lorem ipsum dolor sit amet, magnam reiciendis quo velit reprehenderit corporis quibusdam harum culpa ad sunt ullam eos sed natus explicabo veritatis aspernatur. Unde accusamus totam, hic impedit sapiente iure dolores possimus nostrum exercitationem velit.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo omnis rem quis, totam ea quod, labore delectus nam odit numquam repellat nihil ad necessitatibus est sapiente sunt velit architecto recusandae laudantium. Hic, necessitatibus accusantium recusandae deserunt totam !</p>
         <a href="">Continue reading</a>
       </div>
 
